<resources>
    <string name="app_name">Friendies</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign-up</string>
    <string name="map">Tap Me!</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="register">Register</string>
    <string name="name_input">Enter you full name here</string>
    <string name="email_input">Enter your email here</string>
    <string name="password_input">Enter your password here</string>
    <string name="already_have">Already signed up? Log In Here!</string>
    <string name="register_title">User Registration</string>

    <string name="new_event_title">New Event</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="event_name_input">Name your event</string>
    <string name="event_address_input">Enter the address of your event</string>
    <string name="add_event_button">Add Event!</string>

    <string name="participants">Participants: </string>

    <string-array name="Locations">
        <item>Golden</item>
        <item>Denver</item>
        <item>Lakewood</item>
        <item>Aurora</item>
    </string-array>
</resources>
